--- a/template.Rmd
+++ b/template.Rmd
@@ -3,15 +3,24 @@ title: "Data Import"
 output: github_document
 ---
 
-# Data import:CSVs
-
-Here's a **code chunk** that samples from 
-a _normal distribution_:
 
 ```{r}
-samp = rnorm(100)
-length(samp)
+library(tidyverse)
+library(readr)
 ```
+
+## Data import:CSVs
+
+use 'readr' package
+
+```{r}
+litters_df = read_csv("data/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
+#The 'clean_names" in the "janitor" package is jsut used the clean the variable names. 
+
+```
+
+
 
 # Section 2
 
