--- a/data_manipulation_lecture9.22.Rmd
+++ b/data_manipulation_lecture9.22.Rmd
@@ -45,3 +45,115 @@ rename(litters_df, GROUP = group, LiTtEr_NuMbEr = litter_number)
 #rename without selecting
 ```
 
+# select with functions
+```{r}
+select(litters_df, starts_with("gd"))
+select(litters_df, ends_with("ve"))
+
+select(litters_df, litter_number, pups_survive, everything())
+#this function put litter number and survive up at the front, and put everything else after. This function changes the order of the variables. 
+
+relocate(litters_df, litter_number, pups_survive)
+#This relocate function does the same reordering as the above. 
+```
+
+
+## `filter` select certain rows/ certain observatons.
+
+some examples:
+`gd_of_birth == 20`
+`pups_born_alive >= 2`
+`pups_survive != 4`
+`!(pups_survive == 4)`
+`group %in% c("Con7", "Con8")`
+`group == "Con7" & gd_of_birth == 20`
+`!((pups_survive == 4) & (gd_of_birth == 20))`
+
+```{r}
+filter(litters_df, group == "Con7" & gd_of_birth == 20)
+```
+
+`drop_na(litters_df)` will remove any row with a missing value
+`drop_na(litters_df, wt_increase)` will remove rows for which wt_increase is missing.
+
+```{r}
+drop_na(litters_df)
+drop_na(litters_df, gd18_weight)
+```
+
+## `mutate`
+used when you want to create new variables, change current variabels. 
+
+```{r}
+mutate(litters_df,
+  wt_gain = gd18_weight - gd0_weight,
+  wt_gain_kg = wt_gain * 2.2, 
+  group = str_to_lower(group)
+)
+
+#str_to_lower: is changing the variable to lower case. 
+```
+
+
+##`arrange`
+rearrange the rows in your data. 
+eg. sort your rows by weight, then it goes from lower weight to higher weight. 
+```{r}
+head(arrange(litters_df, group, pups_born_alive), 10)
+```
+
+
+## Piping '%>%' 
+
+to do piping, we can create several intermediate datasets untill you get to the final dataset. 
+```{r}
+litters_data_raw = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data_clean_names = janitor::clean_names(litters_data_raw)
+litters_data_selected_cols = select(litters_data_clean_names, -pups_survive)
+litters_data_with_vars = 
+  mutate(
+    litters_data_selected_cols, 
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group))
+litters_data_with_vars_without_missing = 
+  drop_na(litters_data_with_vars, wt_gain)
+litters_data_with_vars_without_missing
+```
+
+or, we could nest our functions:
+In this case, the first step is in the middle of the code, then it reads from the middle to the outside. 
+```{r}
+litters_data_clean = 
+  drop_na(
+    mutate(
+      select(
+        janitor::clean_names(
+          read_csv("./data/FAS_litters.csv", col_types = "ccddiiii")
+          ), 
+      -pups_survive
+      ),
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)
+    ),
+  wt_gain
+  )
+
+litters_data_clean
+```
+
+Instead, we are using the pipe operator `%>%`
+shortcut: "command + shift + m"
+```{r}
+litters_data = 
+  read_csv("./data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>% 
+  drop_na(wt_gain)
+
+litters_data 
+```
+
