update lecture note

--- a/Tidy Data_lecture 9.27.Rmd
+++ b/Tidy Data_lecture 9.27.Rmd
@@ -116,3 +116,33 @@ lotr_tidy =
   select(movie, everything()) #this is to reorder the columns.#
 ```
 
+
+Joining datasets
+
+read in 2 datasets first
+```{r}
+pup_data = 
+  read_csv("./data/FAS_pups.csv") %>%
+  janitor::clean_names() %>%
+  mutate(
+    sex = recode(sex, `1` = "male", `2` = "female"),
+    sex = factor(sex)) 
+
+litter_data = 
+  read_csv("./data/FAS_litters.csv") %>%
+  janitor::clean_names() %>%
+  separate(group, into = c("dose", "day_of_tx"), sep = 3) %>%
+  relocate(litter_number) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    dose = str_to_lower(dose))
+```
+`sep = 3` means we want to seperate after the third variable
+
+Combine 2 datasets now
+```{r}
+fas_data = 
+  left_join(pup_data, litter_data, by = "litter_number")
+```
+we do a left join because we want everything from the pup_data
+
