--- a/Lecture_9.29_Visualization.Rmd
+++ b/Lecture_9.29_Visualization.Rmd
@@ -95,3 +95,63 @@ ggplot(weather_df, aes(x = tmax, y = tmin)) +
 This shows how many points are in one grid. 
 
 
+##Univariate plots
+
+Histogram
+```{r}
+ggplot(weather_df, aes(x = tmax, fill = name)) + 
+  geom_histogram(position = "dodge", binwidth = 2)
+```
+`fill = name`: instead of using `color`, we use `fill` for histogram to fill the bar color. 
+
+
+Density plot
+```{r}
+ggplot(weather_df, aes(x = tmax, fill = name)) + 
+  geom_density(alpha = .4, adjust = .5, color = "blue")
+```
+
+
+Boxplot
+```{r}
+ggplot(weather_df, aes(x = name, y = tmax)) + geom_boxplot()
+```
+
+
+Violin Plot
+```{r}
+ggplot(weather_df, aes(x = name, y = tmax)) + 
+  geom_violin(aes(fill = name), alpha = .5) + 
+  stat_summary(fun = "median", color = "blue")
+```
+When you are comparing 20 stations, this would be more handy than density plots. 
+
+Ridge plots
+```{r}
+ggplot(weather_df, aes(x = tmax, y = name)) + 
+  geom_density_ridges(scale = .85)
+```
+When you are comparing 20 stations, this would be more handy than density plots.
+
+
+##Saving and Embedding Plots
+
+Fist, let's save a plot
+create + `ggsave`
+```{r}
+weather_plot = ggplot(weather_df, aes(x = tmin, y = tmax)) + 
+  geom_point(aes(color = name), alpha = .5) 
+
+ggsave("weather_plot.pdf", weather_plot, width = 8, height = 5)
+```
+
+
+Fit a graph in a Rmarkdown file and adjust size
+```{r}
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+```
+
