leture notes update

--- a/Lecture 10.6_EDA.Rmd
+++ b/Lecture 10.6_EDA.Rmd
@@ -1,25 +1,156 @@
 ---
-title: "Lecture10.6_EDA"
+title: "Lecture10.6_numeric EDA"
 author: "Fengdi Zhang"
 date: "2022-10-6"
 output: github_document
 ---
 
 ```{r setup, include=FALSE}
-
+library(tidyverse)
 ```
 
-## 
+## import data
 
 ```{r}
+weather_df =  
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10,
+    month = lubridate::floor_date(date, unit = "month")) %>%
+  select(name, id, everything())
+```
+`lubridate` packege help with date. 
+`floor_date` round date down. 2.27 --> 2.1; 3.8 --> 3.1, etc
+we are doing this because we will `groupby` month later today. 
 
+## Group_by()
+
+we will group by the name first, 
+```{r}
+weather_df %>%
+  group_by(name, month)
+```
+The output shows that there are 3*12 groups now. Although nothing has beed changed to the dataset. 
+
+## Summarize ()
+Let's group and then summarize
+
+```{r}
+weather_df %>%
+  group_by(name, month) %>%
+  summarize(n_obs = n())
+```
+`n_obs = n()` naming a new variable `n_obs` using the function `n()` to count how many subjects there are inside each group. 
+
+count in other ways, not doing groupby and summarize
+```{r}
+weather_df %>%
+  count(name, month)
 ```
 
-## 
+don't use `table()` because it is not forming a dataframe, it doesn't allow you to do any analysis. 
+```{r, eval = False}
+weather_df %>%
+  pull(month) %>% 
+  table()
+```
 
+You can have multiple summaries
+```{r}
+weather_df %>%
+  group_by(month) %>%
+  summarize(
+    n_obs = n(),
+    n_days = n_distinct(date))
+```
+`n_distinct()` counts how many distinct subjects there are in the variable. 
+
+## A brief aside on 2x2 tables
+
+```{r}
+weather_df %>% 
+  mutate(
+    cold = case_when(
+      tmax <  5 ~ "cold",
+      tmax >= 5 ~ "not_cold",
+      TRUE      ~ ""  #tells whatever didn't meet the last two lines
+  )) %>% 
+  filter(name != "Waikiki_HA") %>% 
+  group_by(name, cold) %>% 
+  summarize(count = n()) %>% 
+  pivot_wider(
+    names_from = cold,
+    values_from = count
+  )
+```
 
 
 ```{r}
-
+weather_df %>% 
+  mutate(cold = case_when(
+    tmax <  5 ~ "cold",
+    tmax >= 5 ~ "not_cold",
+    TRUE     ~ ""
+  )) %>% 
+  filter(name != "Waikiki_HA") %>% 
+  janitor::tabyl(name, cold)
 ```
+`tabyl` function in `janitor` package gives a quicker way to create 2x2 table. 
+
+`janitor` package is very helpful to do lots of things. count total rows, columns, tests, etc. 
+
+
+## General Summaries
+```{r}
+weather_df %>%
+  group_by(month) %>%
+  summarize(
+    mean_tmax = mean(tmax), #computing the mean of tmax in every group
+    mean_prec = mean(prcp, na.rm = TRUE), 
+    # na.rm = TRUE means we are removing the NAs/missing values. 
+    median_tmax = median(tmax),
+    sd_tmax = sd(tmax, na.rm = TRUE))
+```
+
+If you want to summarize multiple columns using the same summary, the across function is helpful.
+```{r}
+weather_df %>%
+  group_by(name, month) %>%
+  summarize(across(tmin:prcp, mean))
+  # you are computing the mean for each variable between tmin and prcp. 
+```
+
+```{r}
+weather_df %>%
+  group_by(name, month) %>%
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  #a dataframe has been created here, then you can start plottin. 
+  ggplot(aes(x = month, y = mean_tmax, color = name)) + 
+    geom_point() + geom_line() + 
+    theme(legend.position = "bottom")
+```
+
+
+```{r}
+weather_df %>%
+  group_by(name, month) %>%
+  summarize(mean_tmax = mean(tmax)) %>% 
+  pivot_wider(
+    names_from = name,
+    values_from = mean_tmax) %>% 
+  knitr::kable(digits = 1)
+```
+
+
+
 
