--- a/lecture 10.18_String &Factor variable.Rmd
+++ b/lecture 10.18_String &Factor variable.Rmd
@@ -148,3 +148,53 @@ data_marj %>%
     theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
+
+## Restaurant inspection
+```{r}
+data("rest_inspec")
+
+rest_inspec %>% 
+  group_by(boro, grade) %>% 
+  summarize(n = n()) %>% 
+  pivot_wider(names_from = grade, values_from = n)
+```
+
+```{r}
+rest_inspec =
+  rest_inspec %>%
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") %>% 
+  mutate(boro = str_to_title(boro))
+```
+`str_to_title` we are leaving the first letter capitalized, and the other letters lower cases. 
+
+Let's find pizza places
+```{r}
+rest_inspec %>% 
+  filter(str_detect(dba, "Pizza")) %>% # this is to find pizza in dba column
+  group_by(boro, grade) %>% 
+  summarize(n = n()) %>% 
+  pivot_wider(names_from = grade, values_from = n)
+
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(boro = fct_infreq(boro)) %>% #this is making the order of boro not by alphabetic order, so we convert to a factor label.
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar() 
+
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = str_replace(boro, "Manhattan", "The City")) %>% #Here, it can revert the boro back to string, so the sequence of these 2 lines matter. 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar() 
+
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = replace(boro, which(boro == "Manhattan"), "The City")) %>% # or you can use replace. 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
