--- a/Lecture 10.27_Writing_Functions.Rmd
+++ b/Lecture 10.27_Writing_Functions.Rmd
@@ -6,21 +6,213 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-
+library(tidyverse)
+library(rvest)
 ```
 
-## 
+## Z-scores
+
+This is how we usually compute z-scores
+```{r}
+x_vec = rnorm(25, mean = 5, sd = 3)
+
+(x_vec - mean(x_vec)) / sd(x_vec)
+```
+
+Suppose you want to do this often. Let's now compute a function to calculate z-scores.
+```{r}
+z_scores = function(x) {
+  # This is to tell that this is a function for x. Everything in {} is the body of the function. 
+  z = (x - mean(x)) / sd(x)
+  z 
+  # this tells what to return for this function. 
+}
+
+z_scores(x_vec)
+z_scores(x = 1:10)
+z_scores(x = rbinom(1000, 1, .6))
+z_scores(x = 3) # we get an NA for this because we don't have "sd" for just one number. 
+```
 
 ```{r}
+z_scores = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Argument x should be numeric")
+  } 
+  
+  else if (length(x) == 1) {
+    stop("Z scores cannot be computed for length 1 vectors")
+  }
+  
+  z = mean(x) / sd(x)
+  
+  z
+}
+
+z_scores("my name is jeff")
+```
+
+## Multiple Outputs
+
+Let's just get the mean and the sd from the vector input. 
+```{r}
+mean_and_sd = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Argument x should be numeric")
+  } 
+  
+  else if (length(x) == 1) {
+    stop("Cannot be computed for length 1 vectors")
+  }
+  
+  mean_x = mean(x)
+  sd_x = sd(x)
+
+  list(mean = mean_x, 
+       sd = sd_x)
+  #This is to return a list of two. 
+}
+
+mean_and_sd(x_vec)
+
+mean_and_sd = function(x) {
+  
+  if (!is.numeric(x)) {
+    stop("Argument x should be numeric")
+  } 
+  
+  else if (length(x) == 1) {
+    stop("Cannot be computed for length 1 vectors")
+  }
+  
+  mean_x = mean(x)
+  sd_x = sd(x)
+
+  tibble(mean = mean_x, 
+       sd = sd_x)
+  #This is to return a tibble of two. 
+}
 
 ```
 
-## 
-
-
+## Multiple inputs. Writing Simulations. 
 
 ```{r}
+sim_data = tibble(
+  x = rnorm(30, mean = 2, sd = 3)
+)
 
+sim_data %>% 
+  summarize(
+    mu_hat = mean(x),
+    sigma_hat = sd(x)
+  )
 ```
 
+can I do this using a function?
+```{r}
+sim_mean_sd = function(n_obs, true_mean, true_sd) {
+  x = rnorm(n = n_obs, mean = true_mean, sd = true_sd)
+  
+  tibble(
+    mean = mean(x),
+    sd = sd(x)
+  )
+}
+
+sim_mean_sd(25, 100, 1)
+```
+
+## Fixing bad stuff
+
+```{r}
+url = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber=1"
+
+dynamite_html = read_html(url)
+
+review_titles = 
+  dynamite_html %>%
+  html_nodes(".a-text-bold span") %>%
+  html_text()
+
+review_stars = 
+  dynamite_html %>%
+  html_nodes("#cm_cr-review_list .review-rating") %>%
+  html_text() %>%
+  str_extract("^\\d") %>%
+  as.numeric()
+
+review_text = 
+  dynamite_html %>%
+  html_nodes(".review-text-content span") %>%
+  html_text() %>% 
+  str_replace_all("\n", "") %>% 
+  str_trim()
+
+reviews = tibble(
+  title = review_titles,
+  stars = review_stars,
+  text = review_text
+)
+```
+
+Let's write a function to get reviews
+```{r}
+read_page_reviews = function(url){
+  dynamite_html = read_html(url)
+
+review_titles = 
+  dynamite_html %>%
+  html_nodes(".a-text-bold span") %>%
+  html_text()
+
+review_stars = 
+  dynamite_html %>%
+  html_nodes("#cm_cr-review_list .review-rating") %>%
+  html_text() %>%
+  str_extract("^\\d") %>%
+  as.numeric()
+
+review_text = 
+  dynamite_html %>%
+  html_nodes(".review-text-content span") %>%
+  html_text() %>% 
+  str_replace_all("\n", "") %>% 
+  str_trim() %>% 
+  str_subset("The media could not be loaded.", negate = TRUE) %>% 
+  str_subset("^$", negate = TRUE)
+
+reviews = tibble(
+  title = review_titles,
+  stars = review_stars,
+  text = review_text)
+
+reviews
+}
+
+
+url = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber=2"
+read_page_reviews(url)
+```
+
+
+what good does this do?
+```{r}
+url_base = "https://www.amazon.com/product-reviews/B00005JNBQ/ref=cm_cr_arp_d_viewopt_rvwer?ie=UTF8&reviewerType=avp_only_reviews&sortBy=recent&pageNumber="
+
+vec_urls = str_c(url_base, 1:5)
+
+dynamite_reviews = bind_rows(
+  read_page_reviews(vec_urls[1]),
+  read_page_reviews(vec_urls[2]),
+  read_page_reviews(vec_urls[3]),
+  read_page_reviews(vec_urls[4]),
+  read_page_reviews(vec_urls[5])
+)
+
+dynamite_reviews
+
+```
 
